[package]
name = "alp_bomber"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.37"
rand = { version = "0.9.1", features = ["small_rng"] }
ctrlc = { version = "3", features = ["termination"] }
libc = "0.2"
socket2 = "0.5.9"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
